# LibFix

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  main.py
src/core/: alternatives.py  audit_history.py  cache.py  dependency_analyzer.py  dependency_auditor.py  dependency_finder.py  dependency_integrator.py  dependency_parser.py  dependency_replacer.py  knowledge.py  libraries_io.py  migration_guide.py  pypi_utils.py
src/data/: inactive_packages.py
src/libfix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: dep_utils.py  path_utils.py
tests/: test_alternatives.py  test_audit_history.py  test_cli.py  test_dep_utils.py  test_dependency_analyzer.py  test_dependency_auditor.py  test_dependency_finder.py  test_dependency_parser.py  test_dependency_replacer.py  test_migration_guide.py  test_new_parsers.py  test_path_utils.py  test_pypi_utils.py
